tests/NormalTests/paczka2/big_fuzzy/30331091.err
Error in line 2: kBV A574 66,8
Error in line 3: ZF9zld9Vns3 A574 46,6
Error in line 5: ZF9zld9Vns3 S253 35,7
Error in line 15: ZF9zld9Vns3 A574 276,5
Error in line 24: 6CHfIjhCd S253 86,7
Error in line 26: HWvFQZTjQE S676 -1,5
Error in line 36: S504 S253 51,9
Error in line 39: S504 S504 856,0
Error in line 58: ZF9zld9Vns3 S504 78,0
Error in line 69: iW3MLsYo8iH A5"4 91,4
Error in line 68: kBV S504 258,7
Error in line 50: HWvFQZTjQE S676 5,5
Error in line 73: HWvFQZTjQE A574 14,4
Error in line 79: kBV S676 48,0
Error in line 78: S504 A574 232,4
Error in line 65: iW3MLsYo8iH S253 96,3
Error in line 84: izBwo9TrW A574 96,8
Error in line 89: izBwo9TrW S253 21,6
Error in line 88: iW3MLsYo8iH A574 133,4
Error in line 91: ZF9zld9Vns3 S253 9,4
Error in line 98: ZF9zld9Vns3 A574 18,9
Error in line 105: ZF9zld9Vns3 S504 6,4
Error in line 108: kBV S676 37,9
Error in line 116: kBV S253 28,1
Error in line 123: kBV S676 -1,7
Error in line 122: HWvFQZTjQE S253 47,2
Error in line 124: ZF9zld9Vns3 S253 52,3
Error in line 127: ZF9zld9Vns3 A574 17,6
Error in line 126: 6CHfIjhCd S676 24,7
Error in line 134: iW3MLsYo8iH S253 3,5
Error in line 144: kBV S253 -4,1
Error in line 146: 6CHfIjhCd S253 80,3
Error in line 136: izBwo9TrW A574 18,6
Error in line 130: kBV S253 97,3
Error in line 149: S504 A574 85,4
Error in line 156: izBwo9TrW S253 -4,8
Error in line 168: 6CHfIjhCd A574 64,04
Error in line 150: izBwo9TrW S253 64,4
Error in line 161: 6CHfIjhCd A574 51,5
Error in line 173: kBV S253 40,3
Error in line 176: izBwo9TrW A574 53,8
Error in line 186: iW3MLsYo8iH A574 53,2
Error in line 196: 6CHfIjhCd S676 37,2
Error in line 182: ZF9zld9Vns3 S253 4,6
Error in line 207: ZF9zld9Vns3 S504 152,7
Error in line 224: izBwo9TrW A574 27,1
Error in line 246: iW3MLsYo8iH A574 36,3
